[project]
name = "structured-llm"
version = "0.1.1"
description = "Schema-driven structured output with retry for local LLMs"
requires-python = ">=3.10"

dependencies = [
  "langgraph",
  "langchain",
  "pydantic"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]